[gd_scene load_steps=4 format=3 uid="uid://5h0o701ctdvj"]

[ext_resource type="Script" uid="uid://bomoi37rnhk3x" path="res://scenes/food/food.gd" id="1_lgl0r"]
[ext_resource type="AudioStream" uid="uid://b15rim1aouul4" path="res://assets/sfx/sizzle.mp3" id="5_icjja"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnnhp"]
radius = 39.0
height = 174.0

[node name="Food" type="Area2D"]
script = ExtResource("1_lgl0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rnnhp")

[node name="CookingTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.9, 0.9)

[node name="SizzleSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_icjja")
volume_db = -10.0

[node name="PlayerAnimTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="FoodAnimTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="BurnedTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="CookingTimer" to="." method="_on_cooking_timer_timeout"]
[connection signal="timeout" from="PlayerAnimTimer" to="." method="_on_player_anim_timer_timeout"]
[connection signal="timeout" from="FoodAnimTimer" to="." method="_on_food_anim_timer_timeout"]
[connection signal="timeout" from="BurnedTimer" to="." method="_on_burned_timer_timeout"]
